// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`@useForm @handleSubmit when validation and submit successful 1`] = `
Object {
  "errors": Object {},
  "handleBlur": [Function],
  "handleChange": [Function],
  "handleSubmit": [Function],
  "isSubmitting": false,
  "touched": Object {
    "email": true,
    "password": true,
  },
  "values": Object {
    "email": "test@test.com",
    "password": "password",
  },
}
`;

exports[`@useForm @handleSubmit when validation successful and submit unsuccessful 1`] = `
Object {
  "errors": Object {},
  "handleBlur": [Function],
  "handleChange": [Function],
  "handleSubmit": [Function],
  "isSubmitting": false,
  "touched": Object {
    "email": true,
    "password": true,
  },
  "values": Object {
    "email": "test@test.com",
    "password": "password",
  },
}
`;

exports[`@useForm @handleSubmit when validation unsuccessful 1`] = `
Object {
  "errors": Object {
    "email": "Invalid email",
    "password": "Invalid password",
  },
  "handleBlur": [Function],
  "handleChange": [Function],
  "handleSubmit": [Function],
  "isSubmitting": false,
  "touched": Object {
    "email": true,
    "password": true,
  },
  "values": Object {
    "email": "test@test.com",
    "password": "password",
  },
}
`;

exports[`@useForm handles blur 1`] = `
Object {
  "errors": Object {},
  "handleBlur": [Function],
  "handleChange": [Function],
  "handleSubmit": [Function],
  "isSubmitting": false,
  "touched": Object {
    "email": true,
  },
  "values": Object {
    "email": "",
    "password": "",
  },
}
`;

exports[`@useForm handles change 1`] = `
Object {
  "errors": Object {},
  "handleBlur": [Function],
  "handleChange": [Function],
  "handleSubmit": [Function],
  "isSubmitting": false,
  "touched": Object {},
  "values": Object {
    "email": "test@test.com",
    "password": "",
  },
}
`;

exports[`@useForm returns initial state 1`] = `
Object {
  "errors": Object {},
  "handleBlur": [Function],
  "handleChange": [Function],
  "handleSubmit": [Function],
  "isSubmitting": false,
  "touched": Object {},
  "values": Object {
    "email": "",
    "password": "",
  },
}
`;
